# xeditor

./: .editorconfig  Cargo.toml  README.md  flake.nix  rustfmt.toml
assets/: xeditor.desktop
src/: main.rs
